--- a/index.html
+++ b/index.html
@@ -4,6 +4,10 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="/style.css" />
+    <script
+      src="https://kit.fontawesome.com/5a214790e0.js"
+      crossorigin="anonymous"
+    ></script>
     <title>Document</title>
   </head>
   <body>
@@ -30,6 +34,7 @@
     <section class="heroSection">
       <div class="heroContainer">
         <div class="textContainer">
+          <img src="/Assets/Rectangle 6.png" alt="" />
           <h1>LET'S EXPLORE UNIQUE CLOTHES.</h1>
           <p>Live for Influential and Innovative fashion!</p>
 
@@ -41,6 +46,76 @@
         </div>
         <div class="heroImgContainer">
           <img src="/Assets/girl.png" alt="" />
+        </div>
+      </div>
+    </section>
+    <!-- SECTION 2 CARD SECTION -->
+    <section class="cardSection padding">
+      <div class="cardContainer">
+        <div class="new-arrival">
+          <h1>NEW ARRIVAL</h1>
+          <img src="/Assets/vector.png" alt="" />
+        </div>
+        <div class="cards">
+          <!-- card1 -->
+          <div class="card">
+            <img src="/Assets/orange girl.png" alt="" />
+            <div class="cardTextContainer">
+              <div class="cardText">
+                <h1>Hoodies & Sweetshirt</h1>
+                <span>Explore Now</span>
+              </div>
+              <i class="fa-solid fa-arrow-right"></i>
+            </div>
+          </div>
+
+          <!-- card2 -->
+          <div class="card">
+            <img src="/Assets/Purple girl.png" alt="" />
+            <div class="cardTextContainer">
+              <div class="cardText">
+                <h1>Hoodies & Sweetshirt</h1>
+                <span>Explore Now</span>
+              </div>
+              <i class="fa-solid fa-arrow-right"></i>
+            </div>
+          </div>
+
+          <!-- card3 -->
+
+          <div class="card">
+            <img src="/Assets/Blue girl.png" alt="" />
+            <div class="cardTextContainer">
+              <div class="cardText">
+                <h1>Hoodies & Sweetshirt</h1>
+                <span>Explore Now</span>
+              </div>
+              <i class="fa-solid fa-arrow-right"></i>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <!-- SECTION 3 HERO 2 SECTION -->
+    <section class="contentContainer padding">
+      <div class="content">
+        <div class="contentImgContainer">
+          <img src="/Assets/Yellow girl.png" alt="" />
+        </div>
+        <div class="contentText">
+          <div>
+            <h1>PAY DAY</h1>
+            <h1>SALE NOW</h1>
+          </div>
+          <p>
+            Spend minimal $100 get 30% off voucher code for your next purchase
+          </p>
+          <h3>1 June - 10 June 2021</h3>
+          <p>*Terms & Conditions apply</p>
+          <button>
+            SHOP NOW
+          </button>
         </div>
       </div>
     </section>
